.provarCaches/00D5h000009Q6XQEA0/objects/provar__Test_Step_Execution__c.object
<CustomObject>
    <description>The actual result of executing a test step. This is primarily used for logging manual test execution</description>
    <fields>
        <fullName>provar__ActionObs__c</fullName>
        <description>Where no test step has been pre-defined the user should provide their own description of the action taken or observation noted. This is especially useful for exploratory or design testing. This field will be overwritten from the corresponding Test Step if provided.</description>
        <inlineHelpText>If no pre-defined action was used then describe the action taken or observation noted</inlineHelpText>
        <label>Action (Short)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Action_Long__c</fullName>
        <label>Action (Long)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>provar__Actual_Result__c</fullName>
        <description>Detail of the actual result observed or recorded if applicable</description>
        <inlineHelpText>Result of executing this step for comparison to the Expected Result</inlineHelpText>
        <label>Actual Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Comments__c</fullName>
        <inlineHelpText>Enter any other relevant information</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>provar__End_Date_Time__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>provar__Parent_Test_Step_Execution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Test Step Execution</label>
        <referenceTo>provar__Test_Step_Execution__c</referenceTo>
        <relationshipLabel>Children Test Step Executions</relationshipLabel>
        <relationshipName>Test_Step_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Result__c</fullName>
        <description>Result of execution of the test step</description>
        <inlineHelpText>Execution result</inlineHelpText>
        <label>Step Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>provar__Test_Result</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Sequence_No__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The sequence number in which steps were executed</description>
        <inlineHelpText>The sequence in which steps were executed is very important</inlineHelpText>
        <label>Sequence No</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>provar__Start_Date_Time__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>provar__Test_Execution__c</fullName>
        <description>The test case execution to which this step relates</description>
        <inlineHelpText>The parent test case execution for when this step is executed</inlineHelpText>
        <label>Test Execution</label>
        <referenceTo>provar__Test_Execution__c</referenceTo>
        <relationshipLabel>Test Step Executions</relationshipLabel>
        <relationshipName>Test_Step_Executions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>provar__Test_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Predefined Test Step to which this execution relates, if any. Alternatively the user may provide a free type action or observation</description>
        <inlineHelpText>Select the planned test step performed for this execution result, note this will override any custom action or observation</inlineHelpText>
        <label>Test Step</label>
        <referenceTo>provar__Test_Step__c</referenceTo>
        <relationshipLabel>Test Step Executions</relationshipLabel>
        <relationshipName>Test_Step_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__URL__c</fullName>
        <inlineHelpText>The URL where this test step was executed</inlineHelpText>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Test Step Execution</label>
    <nameField>
        <displayFormat>TSE-{00000000}</displayFormat>
        <label>Test Step Execution Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Step Executions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>provar__A_test_step_or_action_must_be_entered</fullName>
        <active>true</active>
        <description>Either an existing test step or a custom action or observation must be recorded to save a record</description>
        <errorConditionFormula>ISBLANK(provar__ActionObs__c) &amp;&amp; ISBLANK( provar__Test_Step__c )</errorConditionFormula>
        <errorDisplayField>provar__ActionObs__c</errorDisplayField>
        <errorMessage>Either a predefined Test Step or the field &quot;Action (short)&quot; must be entered to save the record.</errorMessage>
    </validationRules>
</CustomObject>